--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^1.0.2",
     "sass": "^1.51.0",
     "typescript": "^4.4.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
